DataType + VehicleBuilder update + Sim Control fix