@@ -3,14 +3,12 @@ package de.rwth.montisim.simulation.eesimulator.actuator;
 
 import java.util.logging.Logger;
 
-import de.rwth.montisim.commons.dynamicinterface.DataType;
-import de.rwth.montisim.commons.dynamicinterface.DataType.Type;
-import de.rwth.montisim.commons.simulation.PhysicalValue;
+import de.rwth.montisim.commons.dynamicinterface.BasicType;
+import de.rwth.montisim.commons.physicalvalue.PhysicalValueDouble;
 import de.rwth.montisim.commons.simulation.TimeUpdate;
 import de.rwth.montisim.commons.simulation.Updatable;
 import de.rwth.montisim.commons.simulation.Updater;
 import de.rwth.montisim.simulation.eesimulator.components.EEComponent;
-import de.rwth.montisim.simulation.eesimulator.components.EEComponentType;
 import de.rwth.montisim.simulation.eesimulator.events.MessageReceiveEvent;
 import de.rwth.montisim.simulation.eesimulator.exceptions.EEMessageTypeException;
 import de.rwth.montisim.simulation.eesimulator.message.Message;
@@ -21,23 +19,25 @@ public class Actuator extends EEComponent implements Updatable {
     public static final String SETTER_PREFIX = "set_";
 
     public final transient ActuatorProperties properties;
-    final transient PhysicalValue actuatedValue;
+    final transient PhysicalValueDouble actuatedValue;
     SensorLogic sensor;
     public double targetValue;
     final transient boolean sendFeedback; // Whether the actuator senses itself and sends its current value on the bus. ~>
                                 // "Sensor enabled"
-
+    //transient boolean isDouble;
     transient MessageInformation msgInfo;
 
-    public Actuator(ActuatorProperties properties, PhysicalValue actuatedValue, Updater updater) {
+    public Actuator(ActuatorProperties properties, PhysicalValueDouble actuatedValue, Updater updater) {
         super(properties);
-        if (actuatedValue.type.type != Type.DOUBLE && actuatedValue.type.type != Type.FLOAT)
-            throw new IllegalArgumentException("Actuator can only actuate on float or double values (but here type "
-                    + actuatedValue.type + " for value " + actuatedValue.name + ")");
+        // isDouble = actuatedValue.type.equals(BasicType.DOUBLE);
+        // if (!isDouble && !actuatedValue.type.equals(BasicType.FLOAT))
+        //     throw new IllegalArgumentException("Actuator can only actuate on float or double values (but here type "
+        //             + actuatedValue.type + " for value " + actuatedValue.name + ")");
         this.properties = properties;
         this.actuatedValue = actuatedValue;
-        this.targetValue = actuatedValue.type.type == Type.DOUBLE ? (Double) actuatedValue.get()
-                : (Float) actuatedValue.get();
+        this.targetValue = actuatedValue.getValue();
+        // this.targetValue = isDouble ? (Double) actuatedValue.get()
+        //         : (Float) actuatedValue.get();
         updater.addUpdatable(this);
         this.sendFeedback = properties.sensorProperties.isPresent();
         if (sendFeedback)
@@ -46,7 +46,7 @@ public class Actuator extends EEComponent implements Updatable {
 
     @Override
     protected void init() throws EEMessageTypeException {
-        this.msgInfo = addOptionalInput(SETTER_PREFIX + actuatedValue.name, DataType.DOUBLE, true);
+        this.msgInfo = addOptionalInput(SETTER_PREFIX + actuatedValue.name, BasicType.DOUBLE, true);
         if (sendFeedback)
             sensor.init(this);
     }
@@ -60,8 +60,9 @@ public class Actuator extends EEComponent implements Updatable {
 
     // Can be overwritten for more complex actuation behavior
     protected void actuate(TimeUpdate newTime) {
-        double val = actuatedValue.type.type == Type.DOUBLE ? (Double) actuatedValue.get()
-                : (Float) actuatedValue.get();
+        // double val = isDouble ? (Double) actuatedValue.get()
+        //         : (Float) actuatedValue.get();
+        double val = actuatedValue.getValue();
         double maxChange = properties.change_rate * newTime.deltaSeconds;
         double delta = targetValue - val;
         if (Math.abs(delta) > maxChange) {
@@ -72,7 +73,8 @@ public class Actuator extends EEComponent implements Updatable {
             val = properties.max;
         if (val < properties.min)
             val = properties.min;
-        actuatedValue.set(actuatedValue.type.type == Type.DOUBLE ? new Double(val) : new Float(val));
+        //actuatedValue.set(isDouble ? Double.valueOf(val) : Float.valueOf((float)val));
+        actuatedValue.set(Double.valueOf(val));
     }
 
     @Override
@@ -84,11 +86,6 @@ public class Actuator extends EEComponent implements Updatable {
             Logger.getLogger("Warnings").warning("Actuator \"" + properties.name + "\" received unexpected message: "
                     + msg.msgInfo.name);
         }
-    }
-
-    @Override
-    public EEComponentType getComponentType() {
-        return EEComponentType.ACTUATOR;
     }
 
 }
